more refactoring; cleaning code; removed myadmin #24
