# rest_server/src/swagger/smfr.yaml
@@ -237,10 +237,6 @@ paths:
           required: true
           default: en
         - in: query
-          name: forecast_id
-          type: integer
-          description: forecast id (e.g. 201804111200)
-        - in: query
           name: startdate
           type: string
           format: date-time
@@ -324,9 +320,6 @@ definitions:
       trigger:
         type: string
         enum: [background, on-demand, manual]
-      ctype:
-        type: string
-        enum: [keywords, geo]
       forecast_id:
         type: string
       tracking_keywords:
@@ -334,9 +327,7 @@ definitions:
         items:
           type: string
       locations:
-        type: array
-        items:
-          type: string
+        type: object
       languages:
         type: array
         items:
@@ -345,8 +336,6 @@ definitions:
         type: string
         format: date-time
       nuts2:
-        type: string
-      nuts2source:
         type: string
       status:
         type: string
@@ -359,11 +348,15 @@ definitions:
         format: date-time
       bboxfinder:
         type: string
+      bounding_box:
+        type: string
 
   CollectionPayload:
     type: object
     required: [trigger]
     properties:
+      tzclient:
+        type: string
       trigger:
         type: string
         enum: [background, manual]
@@ -376,8 +369,8 @@ definitions:
         type: string
       keywords:
         type: string
-      bounding_boxes:
-        type: string
+      bounding_box:
+        type: object
       configuration:
         type: object
 
@@ -385,6 +378,8 @@ definitions:
   OnDemandPayload:
     type: object
     properties:
+      tzclient:
+        type: string
       efas_id:
         type: integer
       forecast:
@@ -399,6 +394,8 @@ definitions:
       lead_time:
         type: integer
       nuts:
+        type: string
+      tz:
         type: string
 
   CollectionStats:
